Freedom Sanbox Ant Deploy/src/objects/Approved_Action_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_Amount__c</fullName>
        <label>Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated__c</fullName>
        <label>Allocated %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Used for current SIP Change, current Lumpsum Action Amount, Suggested SIP amount, suggested amount</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Approved Action Plans</relationshipLabel>
        <relationshipName>Approved_Action_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Approved Action Plans</relationshipLabel>
        <relationshipName>Approved_Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investment_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investment Asset</label>
        <referenceTo>Investment_Asset__c</referenceTo>
        <relationshipLabel>Approved Action Plans</relationshipLabel>
        <relationshipName>Approved_Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lumpsum_Action__c</fullName>
        <label>Lumpsum Action</label>
        <picklist>
            <picklistValues>
                <fullName>Hold - Change of broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold - No Change of broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redeem (Align to Goal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redeem (Sell)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STP To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STP From</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Used for Suggested Lumpsum Notes</description>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SIP_Action__c</fullName>
        <label>SIP Action</label>
        <picklist>
            <picklistValues>
                <fullName>Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheme_Name_Text__c</fullName>
        <label>Scheme Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheme_Name__c</fullName>
        <description>Used in suggested lumpsum and SIP table</description>
        <label>Scheme Name</label>
        <picklist>
            <picklistValues>
                <fullName>Birla Dividend Yield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla Sunlife 95</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSL Dynamic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSL Frontline Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSL Mid Cap Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSL Monthly Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSL Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP Balanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSPBR Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSPBR opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSPBR Top 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP Floating Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP Savings-Aggressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSP ST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franklin India Bluechip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franklin India Prima Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC Balanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC Cash Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC HIF ST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC MIP-LTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC Prudence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC ST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC Tax Saver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC Top 200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI Dynamic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI Flexible Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI Tax Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suggested_LumpSum_Action__c</fullName>
        <label>Suggested LumpSum Action</label>
        <picklist>
            <picklistValues>
                <fullName>STP To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STP From</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Approved Action Plan</label>
    <nameField>
        <displayFormat>AP-{0000000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approved Action Plans</pluralLabel>
    <recordTypes>
        <fullName>Current_Mutual_Funds_Lumpsum</fullName>
        <active>true</active>
        <label>Current Mutual Funds - Lumpsum</label>
    </recordTypes>
    <recordTypes>
        <fullName>Current_Mutual_Funds_Running_SIPs</fullName>
        <active>true</active>
        <label>Current Mutual Funds - Running SIPs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suggested_Mutual_Funds_Lumpsum</fullName>
        <active>true</active>
        <label>Suggested Mutual Funds - Lumpsum</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suggested_Mutual_Funds_SIPs</fullName>
        <active>true</active>
        <label>Suggested Mutual Funds - SIPs</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>